# Proyecto_titulo

./: Makefile  README.md  cloud_to_pcldatastruct.h  cloud_to_pcldatastruct.h.autosave  cloudpoint.h  keypoints  main.cpp  many_images_matching  many_images_matching.h  many_images_matching.pro  matches  sfm.h  stats.h  utils.h  view.cpp  view.h
BINARY-DESCRIPTORS/: BINARY-DESCRIPTORS  BINARY-DESCRIPTORS.pro  BINARY-DESCRIPTORS.pro.user.43423ee  Makefile  main.cpp
Clouds/: casco2.pcd  coffe.pcd  mesa.pcd  tarro.pcd  tontera.pcd
Input_output/build-input_output-Desktop-Debug/: Makefile
Input_output/build-input_output-Desktop-Release/: Makefile  input_output
Input_output/input_output/: input_output.pro  inputfile.yaml  main.cpp  view.cpp  view.h
build-many_images_matching-Desktop-Release/: Makefile  colors  keypoints  matches
build-many_images_matching-Desktop-Release/PHOTO/: trainimages.txt
cloud_generator/build-many_images_matching-Desktop-Release/: Makefile  keypoints_colors  many_images_matching  matches
cloud_generator/many_images_matching_codes/: cloud_to_pcldatastruct.h  cloudpoint.h  main.cpp  many_images_matching.h  many_images_matching.pro  sfm.h  stats.h  utils.h
many_images_matching_codes/: cloudpoint.h  main.cpp  many_images_matching.h  utils.h  view.cpp
pcl_view/: Makefile  main.cpp
pcl_viewer/: pcl_view.pro
pcl_viewr/: CMakeLists.txt  main.cpp
photo_secuences/casco secuence/: trainImages.txt
photo_secuences/train/: trainImages.txt
train/: trainImages.txt
train_original/: trainImages.txt
(+10 files in other folders)
